examples/test/testpolicy8662.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8662
  namespace: namespace187
spec:
  podSelector:
    matchLabels:
      key16: value49
      key10: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value30
          key35: value44
          key27: value32
      podSelector:
        matchLabels:
          key10: value13
          key12: value22
